2010-03-17  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        [V8] Remove custom bindings callbacks that aren't in use.
        (The relevant .idl doesn't mark them as V8Custom or Custom).
        
        https://bugs.webkit.org/show_bug.cgi?id=33066

        * Android.v8bindings.mk:
        * WebCore.gypi:
        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        * bindings/v8/custom/V8WebGLArrayCustom.h:
        * bindings/v8/custom/V8WebGLByteArrayCustom.cpp:
        * bindings/v8/custom/V8WebGLFloatArrayCustom.cpp:
        * bindings/v8/custom/V8WebGLIntArrayCustom.cpp:
        * bindings/v8/custom/V8WebGLShortArrayCustom.cpp:
        * bindings/v8/custom/V8WebGLUnsignedByteArrayCustom.cpp:
        * bindings/v8/custom/V8WebGLUnsignedIntArrayCustom.cpp:
        * bindings/v8/custom/V8WebGLUnsignedShortArrayCustom.cpp:
        * bindings/v8/custom/V8XMLHttpRequestCustom.cpp:
        * bindings/v8/custom/V8XMLHttpRequestUploadCustom.cpp: Removed.

2010-03-17  Steve Block  <steveblock@google.com>

        Reviewed by Dimitri Glazkov.

        Adds ENABLE(WORKERS) guards to V8 bindings
        https://bugs.webkit.org/show_bug.cgi?id=36221

        Build fix only, no new tests.

        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::instantiateV8Object):
        * bindings/v8/V8Proxy.cpp:
        (WebCore::toV8Context):

2010-03-17  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Remove unused reference to InspectorController from InspectorFrontend.

        https://bugs.webkit.org/show_bug.cgi?id=36218

        * inspector/InspectorFrontend.h:

2010-03-17 Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        WebInspector: Timeline improvements - next iteration.

        The top level records should be collapsed.
        Virtually linked events should be nested in Timeline like Send Request and